package org.wavelabs.soundscope.use_cases.stopRecording;

public interface StopRecordingIB {
    /**
     * Executes the stop recording use case.
     */
    void execute();
}
